--- a/portfolio_css.css
+++ b/portfolio_css.css
@@ -187,17 +187,12 @@ body {
 }
 
 @media (max-width: 600px) {
-    .about-content {
-        text-align: justify !important;
-    }
+    
     
     .about-text {
-        text-align: justify !important;
+        text-align: left !important;
     }
     
-    .about-text p {
-        text-align: justify !important;
-    }
 }
 
 
