--- a/portfolio_css.css
+++ b/portfolio_css.css
@@ -188,15 +188,15 @@ body {
 /* Mobile responsive styles for about section text alignment */
 @media (max-width: 600px) {
     .about-content {
-        text-align: justify !important;
+        text-align: left !important;
     }
     
     .about-text {
-        text-align: justify !important;
+        text-align: left !important;
     }
     
     .about-text p {
-        text-align: justify !important;
+        text-align: left !important;
     }
 }
 
